добавлена зона лесная деревня

--- a/areas/areas/2.4.5/rooms.yml
+++ b/areas/areas/2.4.5/rooms.yml
@@ -228,7 +228,7 @@
     окружают жутковатые деревья, покрытые толстым слоем мха. Из полумрака
     доносятся странные звуки местных птиц и зверей. На востоке же вы
     видите кажущуюся мирной поляну.
-  npcs: ["2.4.5:troll"]    
+  npcs: ["2.4.5:troll"]
   exits:
     - roomId: "2.4.5:clearing"
       direction: восток
@@ -278,10 +278,12 @@
     Вы находитесь в глубине леса в окружении густых колючих
     кустов и древних деревьев. Сквозь листья и переплетенные ветви не
     пробивается ни одного лучика света и тут всегда царит полумрак.
-    Единственный доступный выход ведет отсюда на запад, на узкую тропу.
+    На севере вы замечаете запрятанную в чащобе леса деревеньку.
   exits:
     - roomId: "2.4.5:forest4"
       direction: запад
+    - roomId: "forvill:70500"
+      direction: север
 - id: forest7
   title: "Лесная глушь"
   description: >-
