--- a/areas/areas/forvill/npcs.yml
+++ b/areas/areas/forvill/npcs.yml
@@ -36,7 +36,7 @@
       areaRestricted: true
     capable:
       skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      spells: [ ]
     lootable:
       currencies:
         золото:
@@ -81,8 +81,8 @@
       interval: 40
       areaRestricted: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'lunge' ]
+      spells: [ ]
     lootable:
       currencies:
         золото:
@@ -126,7 +126,7 @@
       areaRestricted: true
     wimpy: true
     capable:
-      skills: [ 'judge' ]
+      skills: [  ]
       spells: [ 'heal' ]
     lootable:
       currencies:
@@ -169,8 +169,8 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'smite' ]
+      spells: [ ]
     lootable:
       currencies:
         золото:
@@ -252,8 +252,8 @@
     memory: true
     wimpy: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [  ]
+      spells: [ 'heal', 'acid', 'paralysis' ]
     lootable:
       currencies:
         золото:
@@ -317,8 +317,8 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'lunge', 'rend' ]
+      spells: [  ]
     lootable:
       currencies:
         золото:
@@ -327,6 +327,10 @@
       pools:
         - "forvill:70514": 33
   metadata:
+    trainer:
+      skill: 'rend'
+      cost: 2
+      requirements: []
     vendor:
       items:
         "forvill:70533":
@@ -372,7 +376,7 @@
     memory: true
     capable:
       skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      spells: [ 'ice_peak' ]
     lootable:
       currencies:
         золото:
@@ -440,8 +444,8 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'rend' ]
+      spells: [  ]
     lootable:
       currencies:
         золото:
@@ -480,7 +484,7 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
+      skills: [ 'lunge' ]
       spells: [ 'heal' ]
     lootable:
       currencies:
@@ -537,8 +541,8 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'judge', 'smite' ]
+      spells: [  ]
     lootable:
       currencies:
         золото:
@@ -596,8 +600,8 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [  ]
+      spells: [ 'paralysis', 'lightning' ]
     lootable:
       currencies:
         золото:
@@ -644,7 +648,7 @@
     assist: true
     capable:
       skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      spells: [ 'paralysis' ]
     lootable:
       currencies:
         золото:
@@ -687,8 +691,8 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [  ]
+      spells: [ 'paralysis', 'fireball', 'acid' ]
     lootable:
       currencies:
         золото:
@@ -736,7 +740,7 @@
         npcs: false
     capable:
       skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      spells: [  ]
     lootable:
       currencies:
         золото:
@@ -776,8 +780,8 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'lunge', 'rend' ]
+      spells: [  ]
     lootable:
       currencies:
         золото:
@@ -818,8 +822,8 @@
       interval: 40
       areaRestricted: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'rend' ]
+      spells: [  ]
     lootable:
       currencies:
         золото:
@@ -895,8 +899,8 @@
     memory: true
     assist: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'judge', 'rend' ]
+      spells: [  ]
     lootable:
       currencies:
         золото:
@@ -937,8 +941,8 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [  ]
+      spells: [ 'heal', 'paralysis' ]
     lootable:
       currencies:
         золото:
@@ -1040,8 +1044,8 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'judge', 'smite' ]
+      spells: [  ]
     lootable:
       currencies:
         золото:
@@ -1081,7 +1085,7 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
+      skills: [  ]
       spells: [ 'heal' ]
     lootable:
       currencies:
@@ -1122,8 +1126,8 @@
     combat: true
     memory: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'rend' ]
+      spells: [ 'paralysis' ]
     lootable:
       currencies:
         золото:
@@ -1165,8 +1169,8 @@
     memory: true
     assist: true
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'lunge' ]
+      spells: [ 'plea' ]
     lootable:
       currencies:
         золото:
@@ -1207,9 +1211,14 @@
     combat: true
     memory: true
     assist: true
+    aggro:
+      delay: 1
+      towards:
+        players: true
+        npcs: false
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'rend' ]
+      spells: [  ]
     lootable:
       currencies:
         золото:
@@ -1247,9 +1256,14 @@
     combat: true
     memory: true
     assist: true
+    aggro:
+      delay: 1
+      towards:
+        players: true
+        npcs: false
     capable:
-      skills: [ 'judge' ]
-      spells: [ 'heal' ]
+      skills: [ 'smite' ]
+      spells: [ 'heal', 'paralysis' ]
     lootable:
       currencies:
         золото:
