--- a/areas/areas/forvill/items.yml
+++ b/areas/areas/forvill/items.yml
@@ -450,9 +450,9 @@
   vname: "философский камень"
   tname: "философским камнем"
   pname: "философском камне"
-  gender: "male"  
+  gender: "male"
   roomDesc: "Сияющий фиолетовым светом камень лежит тут."
-  keywords: [ "древесная", "щепка" ]
+  keywords: [ "философский", "камень" ]
   description: >-
     Необходимый ингредиент для превращения свинца в золото.
   metadata:
@@ -592,7 +592,7 @@
   vname: "комок тины"
   tname: "комком тины"
   pname: "комке тины"
-  gender: "male"  
+  gender: "male"
   roomDesc: "Скользкий комок тины лежит тут."
   keywords: [ "комок", "тина" ]
   description: >-
