--- a/areas/areas/forvill/rooms.yml
+++ b/areas/areas/forvill/rooms.yml
@@ -356,10 +356,13 @@
   title: "Конец северной улицы"
   description: >-
     Улица кончается, упираясь в дом с большими воротами в заборе. Как таковой,
-    дороги здесь уже нет, и в сырое время года тут весьма грязно.
+    дороги здесь уже нет, и в сырое время года тут весьма грязно. На севере, за
+    хорошо укрепленными воротами вы видите густой лес.
   light: 60
   npcs: [ "forvill:70517" ]
   exits:
+    - roomId: "oldroad:66821"
+      direction: север
     - roomId: "forvill:70516"
       direction: запад
     - roomId: "forvill:70518"
@@ -369,6 +372,10 @@
       locked: false
       closed: true
       name: "ворота"
+    "oldroad:66821":
+      locked: false
+      closed: true
+      name: "укрепленные ворота"
 - id: 70525
   title: "Каморка управляющего лесопилкой"
   description: >-
