добавлена потерянная комната

--- a/areas/areas/2.4.5/rooms.yml
+++ b/areas/areas/2.4.5/rooms.yml
@@ -2836,4 +2836,15 @@
   exits:
     - roomId: "2.4.5:sub_after_trap"
       direction: восток
-
+- id: plain13
+  title: "Равнина"
+  description: >-
+    Вы находитесь в начале большой открытой равнине, заросшей
+    разнотравьем. Со всех сторон вас окружают разноцветные заросли
+    тмина, девясила и тысячелистника. На севере местность резко поднимается и
+    переходит в крутую гору.
+  exits:
+    - roomId: "2.4.5:plain8"
+      direction: юг
+    - roomId: "2.4.5:plain11"
+      direction: запад
