--- a/areas/areas/forvill/rooms.yml
+++ b/areas/areas/forvill/rooms.yml
@@ -392,7 +392,7 @@
       direction: запад
   doors:
     "forvill:70530":
-      locked: true
+      locked: false
       closed: true
       name: "дверь"
 - id: 70526
