--- a/areas/areas/gurba/items.yml
+++ b/areas/areas/gurba/items.yml
@@ -583,3 +583,147 @@
     requirements:
       stamina: 25
       skills: [ 'medium_armor' ]
+- id: scroll_recall
+  type: SCROLL
+  name: "свиток возврата"
+  rname: "свитка возврата"
+  dname: "свитку возврата"
+  vname: "свиток возврата"
+  tname: "свитком возврата"
+  pname: "свитке возврата"
+  gender: "male"
+  roomDesc: "Свиток возврата валяется тут."
+  description: >-
+    На этом свитке записано магическое заклинание. Он исчезнет после прочтения.
+  keywords: [ "свиток", "возврата", "возврат" ]
+  metadata:
+    level: 1
+    spell: "recall"
+- id: scroll_fireball
+  type: SCROLL
+  name: "свиток огня"
+  rname: "свитка огня"
+  dname: "свитку огня"
+  vname: "свиток огня"
+  tname: "свитком огня"
+  pname: "свитке огня"
+  gender: "male"
+  roomDesc: "Свиток огня валяется тут."
+  description: >-
+    На этом свитке записано магическое заклинание. Он исчезнет после прочтения.
+  keywords: [ "свиток", "огня" ]
+  metadata:
+    level: 1
+    spell: "fireball"
+- id: scroll_acid
+  type: SCROLL
+  name: "свиток кислоты"
+  rname: "свитка кислоты"
+  dname: "свитку кислоты"
+  vname: "свиток кислоты"
+  tname: "свитком кислоты"
+  pname: "свитке кислоты"
+  gender: "male"
+  roomDesc: "Свиток кислоты валяется тут."
+  description: >-
+    На этом свитке записано магическое заклинание. Он исчезнет после прочтения.
+  keywords: [ "свиток", "кислоты" ]
+  metadata:
+    level: 5
+    spell: "acid"
+- id: scroll_acid
+  type: SCROLL
+  name: "свиток кислоты"
+  rname: "свитка кислоты"
+  dname: "свитку кислоты"
+  vname: "свиток кислоты"
+  tname: "свитком кислоты"
+  pname: "свитке кислоты"
+  gender: "male"
+  roomDesc: "Свиток кислоты валяется тут."
+  description: >-
+    На этом свитке записано магическое заклинание. Он исчезнет после прочтения.
+  keywords: [ "свиток", "кислоты" ]
+  metadata:
+    level: 5
+    spell: "acid"
+- id: scroll_invisibility
+  type: SCROLL
+  name: "свиток невидимости"
+  rname: "свитка невидимости"
+  dname: "свитку невидимости"
+  vname: "свиток невидимости"
+  tname: "свитком невидимости"
+  pname: "свитке невидимости"
+  gender: "male"
+  roomDesc: "Свиток невидимости валяется тут."
+  description: >-
+    На этом свитке записано магическое заклинание. Он исчезнет после прочтения.
+  keywords: [ "свиток", "невидимости" ]
+  metadata:
+    level: 5
+    spell: "invisibility"
+- id: scroll_light
+  type: SCROLL
+  name: "свиток света"
+  rname: "свитка света"
+  dname: "свитку света"
+  vname: "свиток света"
+  tname: "свитком света"
+  pname: "свитке света"
+  gender: "male"
+  roomDesc: "Свиток света валяется тут."
+  description: >-
+    На этом свитке записано магическое заклинание. Он исчезнет после прочтения.
+  keywords: [ "свиток", "света" ]
+  metadata:
+    level: 5
+    spell: "light"
+- id: scroll_lightning
+  type: SCROLL
+  name: "свиток молнии"
+  rname: "свитка молнии"
+  dname: "свитку молнии"
+  vname: "свиток молнии"
+  tname: "свитком молнии"
+  pname: "свитке молнии"
+  gender: "male"
+  roomDesc: "Свиток молнии валяется тут."
+  description: >-
+    На этом свитке записано магическое заклинание. Он исчезнет после прочтения.
+  keywords: [ "свиток", "молнии" ]
+  metadata:
+    level: 5
+    spell: "lightning"
+- id: scroll_paralysis
+  type: SCROLL
+  name: "свиток паралича"
+  rname: "свитка паралича"
+  dname: "свитку паралича"
+  vname: "свиток паралича"
+  tname: "свитком паралича"
+  pname: "свитке паралича"
+  gender: "male"
+  roomDesc: "Свиток паралича валяется тут."
+  description: >-
+    На этом свитке записано магическое заклинание. Он исчезнет после прочтения.
+  keywords: [ "свиток", "паралича" ]
+  metadata:
+    level: 5
+    spell: "paralysis"
+- id: scroll_silence
+  type: SCROLL
+  name: "свиток молчания"
+  rname: "свитка молчания"
+  dname: "свитку молчания"
+  vname: "свиток молчания"
+  tname: "свитком молчания"
+  pname: "свитке молчания"
+  gender: "male"
+  roomDesc: "Свиток молчания валяется тут."
+  description: >-
+    На этом свитке записано магическое заклинание. Он исчезнет после прочтения.
+  keywords: [ "свиток", "молчания" ]
+  metadata:
+    level: 5
+    spell: "silence"
