добавлена зона Арленд

--- a/areas/areas/forvill/items.yml
+++ b/areas/areas/forvill/items.yml
@@ -978,7 +978,7 @@
   vname: "зелье защиты от огня"
   tname: "зельем защиты от огня"
   pname: "зелье защиты от огня"
-  gender: "male"
+  gender: "neuter"
   roomDesc: "Подозрительный пузырек лежит тут."
   description: >-
     Маленький пузырек со светящимся красным зельем.
@@ -1006,7 +1006,7 @@
   vname: "зелье защиты от холода"
   tname: "зельем защиты от холода"
   pname: "зелье защиты от холода"
-  gender: "male"
+  gender: "neuter"
   roomDesc: "Подозрительный пузырек лежит тут."
   description: >-
     Маленький пузырек со светящимся синим зельем.
@@ -1034,7 +1034,7 @@
   vname: "зелье защиты от молнии"
   tname: "зельем защиты от молнии"
   pname: "зелье защиты от молнии"
-  gender: "male"
+  gender: "neuter"
   roomDesc: "Подозрительный пузырек лежит тут."
   description: >-
     Маленький пузырек с искрящимся зельем.
