--- a/areas/areas/tookland/npcs.yml
+++ b/areas/areas/tookland/npcs.yml
@@ -307,6 +307,7 @@
   travelVerbOut: "ушёл"
   description: >-
     Высокий паромщик стоит на переправе к другому берегу.
+  script: 'ferryman'
   attributes:
     health: 400
     mana: 250
